# backend/src/vk-ads/dto/cabinet.dto.ts
@@ -1,0 +1,8 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class VkCabinetDto {
+  @ApiProperty() id: string;
+  @ApiProperty() title: string;
+  @ApiProperty() externalAccountId: string;
+  @ApiProperty() isActive: boolean;
+}
